# spikonado

./: .pre-commit-config.yaml  README.md
.github/workflows/: pre-commit.yml  update-pre-commit.yml
spikonado_bringup/: CMakeLists.txt  README.md  package.xml
spikonado_bringup/launch/: controller_spawner.launch.py
spikonado_description/: CMakeLists.txt  README.md  package.xml
spikonado_description/config/: controllers_config.yaml
spikonado_description/description/sdf/: material_macros.xacro  model.sdf.xacro  omni_wheel.xacro  ros2_control.xacro  sensors.xacro  sim_plugins.xacro
spikonado_description/launch/: display.launch.py
spikonado_description/meshes/base/: base.blend  base_plate.stl
spikonado_description/meshes/omni_wheel/: main_body.stl  omni_wheel.blend  roller.stl
spikonado_sim_bringup/: CMakeLists.txt  README.md  package.xml
spikonado_sim_bringup/config/: bridge_config.yaml  rviz_config.rviz
spikonado_sim_bringup/launch/: full_sim.launch.py  simulator.launch.py  spawner.launch.py
spikonado_sim_bringup/launch/utils/: README.md  ros_gz_bridge.launch.py
spikonado_sim_bringup/worlds/: basic.sdf
